--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,14 @@ javafx {
     modules = [ ]
 }
 
+dependencies {
+    implementation 'com.google.code.gson:gson:2.8.6'
+}
 
 repositories {
     mavenCentral()
 }
+
 
 def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',]
 
